# crosswalk-reproduction

./: .gitignore  README.md  generate_graph.py  main.py  node2vec.sh  node_classification.sh  pyproject.toml  run_experiments.sh
crosswalk_reproduction/: __main__.py
experiments/: infmax_deepwalk_crosswalk.yml  infmax_deepwalk_degree.yml  infmax_deepwalk_fair_degree.yml  infmax_deepwalk_fairwalk.yml  infmax_deepwalk_skip.yml  infmax_deezer_deepwalk_crosswalk.yml  infmax_deezer_deepwalk_fairwalk.yml  infmax_deezer_deepwalk_skip.yml  infmax_deezer_node2vec_crosswalk.yml  infmax_deezer_node2vec_fairwalk.yml  infmax_deezer_node2vec_skip.yml  infmax_node2vec_crosswalk.yml  infmax_node2vec_fairwalk.yml  infmax_node2vec_skip.yml  infmax_pokec_region_deepwalk_crosswalk.yml  infmax_pokec_region_deepwalk_fairwalk.yml  infmax_pokec_region_deepwalk_skip.yml  linkpred_deepwalk_crosswalk.yml  linkpred_deepwalk_fairwalk.yml  linkpred_deepwalk_skip.yml  linkpred_deezer_deepwalk_crosswalk.yml  linkpred_deezer_deepwalk_fairwalk.yml  linkpred_deezer_deepwalk_skip.yml  linkpred_node2vec_crosswalk.yml  linkpred_node2vec_fairwalk.yml  linkpred_node2vec_skip.yml  linkpred_pokec_region_deepwalk_crosswalk.yml  linkpred_pokec_region_deepwalk_fairwalk.yml  linkpred_pokec_region_deepwalk_skip.yml  linkpred_rice_node2vec_skip.yml  nodeclass_deepwalk_crosswalk.yml  nodeclass_deepwalk_degree.yml  nodeclass_deepwalk_fair_degree.yml  nodeclass_deepwalk_fairwalk.yml  nodeclass_deepwalk_skip.yml  nodeclass_node2vec_crosswalk.yml  nodeclass_node2vec_degree.yml  nodeclass_node2vec_fairwalk.yml  (+2 more)
(+807 files in other folders)
